tests/ui/attributes/invalid-repr.stderr
error: `#[repr]` attribute cannot be used on type aliases
  --> $DIR/invalid-repr.rs:1:1
   |
LL | #[repr(align(16))]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: aborting due to 1 previous error

